# bayesian_pyhf

./: .gitignore  LICENSE  README.md  dummy_model.ipynb  environment.yml  noxfile.py  pyhf_pyMC.ipynb  pyhf_pymc_env.yml  pyproject.toml
.github/workflows/: ci.yml
HMC/: HMC.ipynb  opGrad.ipynb
PPC/: prior_posterior.ipynb  priors.ipynb  stitching.ipynb  ttbar_ljets_xsec_inclusive_pruned.ipynb
PredictiveChecks/: external.py  external2.py  external4.py  priors.ipynb  ttbar_ljets_xsec_inclusive_pruned.json
examples/: CHEP.ipynb  CombinedConjugate_Inference.ipynb  GammaGammaHiggs.ipynb  GammaGamma_Higgs.json  New_CombinedConjugate.ipynb  PyHEP.ipynb  SH4b_Test.json  SRee_SRmm_Srem.json  SRee_SRmm_Srem_v2.json  Sh4b.ipynb  SimpleEx.ipynb  SimpleModel.ipynb  Testing.ipynb  Testintg.ipynb  context.ipynb  example.ipynb  final_plots.ipynb  gradients.py  lhood.json  modularize.ipynb  plots.ipynb  plotting.ipynb  post_Normals_Metropolis.txt  post_Unconstrained_Metropolis.txt  prior_Normals_Metropolis.txt  sampling.ipynb  sampling_L.ipynb  testing.ipynb  ttbar_ljets_xsec_inclusive_pruned.json
examples/Calibration_Files/: post_Normals_Metropolis.txt  post_Unconstrained_Metropolis.txt  prior_Unconstrained_Metropolis.txt
notebooks/: HMC.ipynb  priors.ipynb
src/Bayesian_pyhf/: _version.py  infer.py  make_op.py  plotting.py  prepare_inference.py  utils.py
src/bayesian_pyhf/: infer.py  make_op.py  plotting.py  prepare_inference.py
src/pyhf_pymc/: HMC.ipynb  HMC2.ipynb  HMC3.ipynb  HMC_inference.py  MH_inference.py  actual_inference.py  context_inference.py  infer.py  make_op.py  one_line_inference.py  plotting.ipynb  plotting.py  prepare_inference.py  prepare_inference_combined.py  priors.ipynb  sampling.ipynb  sampling2.ipynb  sampling_L.ipynb  slow_inference.py  utils.py
tests/: test_expDataOp.py  test_gradients.py  test_priorDictionaries.py
